appId: com.e2e.app # This is an example app id. Replace it with your app id.
---
- launchApp
- tapOn: "Write a task..."
- inputText: "Pasear al perro"
- tapOn: "Add"
